--- a/src/Components/header.scss
+++ b/src/Components/header.scss
@@ -30,5 +30,8 @@
   align-items: center;
   text-align: right;
 
-  padding: 0 15px 0 15px;
+
+  &:nth-child(1) {
+    padding: 0 15px 0 15px;
+  }
 }
