--- a/src/Components/container.scss
+++ b/src/Components/container.scss
@@ -4,6 +4,7 @@
   //height: Calc(100vh - 80px);
   //height: 100vh;
   min-height: Calc(100vh - 80px);
+  width: 100%;
 
   display: flex;
   flex-direction: column;
@@ -12,6 +13,7 @@
 .Head-Container {
   display: flex;
   flex-direction: column;
+  width: 100%;
 
   user-select: none;
 
@@ -35,9 +37,9 @@
       font-size: 72px;
       line-height: 84px;
       display: flex;
+      justify-content: start;
       align-items: flex-end;
-      text-align: center;
-
+      margin: 0 0 0 -5px;
 
     }
 
@@ -48,7 +50,7 @@
       line-height: 69px;
       display: flex;
       align-items: flex-end;
-      text-align: center;
+      text-align: right;
 
 
     }
@@ -76,6 +78,7 @@
 
 .Days {
   //height: 100%;
+  width: 100%;
   display: flex;
   flex: 1 0 auto;
 
@@ -86,15 +89,16 @@
 
   padding: 5px 0 5px 0;
 
-
   .day {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    cursor: pointer;
 
     width: 13%;
     min-width: auto;
     height: Calc(125px + 24px);
+    min-height: 125px;
     //margin: 24px auto auto 0;
     margin: 8px 4px 8px 4px;
     border-radius: 16px;
@@ -102,16 +106,15 @@
     filter: drop-shadow(0 0 0.75rem rgba(255, 255, 255, 5%));
 
     background: rgba(255, 255, 255, 5%);
-    //background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, $base-color 105%), url("https://i.ytimg.com/vi/TJd5UkS21Mw/maxresdefault.jpg") center center no-repeat;
-    //background: linear-gradient(180deg, $day-background 0%, $base-color 105%);
     background-size: cover !important;
 
 
-    transition: .3s ease-in-out;
+    transition: transform .2s;
 
-    /*&:nth-child(7n) {
-      margin-right: 0;
-    }*/
+    &:hover {
+      transform: scale(1.05);
+      filter: drop-shadow(0 0 0.75rem rgba(255, 255, 255, 15%));
+    }
 
 
     .dayNum {
@@ -155,35 +158,52 @@
       text-align: left;
       padding: 0 5px 5px 15px;
     }
+
+    &:nth-child(7n) {
+      margin-right: 0;
+    }
+
+    &:nth-child(7n-6) {
+      margin-left: 0;
+    }
   }
 
-  .simpleText {
-    width: 100%;
+  .filledDay {
+    cursor: default;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    font-size: 4vw;
-    line-height: 100%;
+    &:hover {
+      transform: none !important;
+    }
   }
 
+  .loading {
+    align-self: center;
+    justify-self: center;
+
+    font-size: 6vw;
+    //line-height: 100%;
+    filter: grayscale(100%) saturate(200%) invert(10%);
+
+    transition: .2s ease-in-out;
+
+    user-select: none;
+  }
 }
+
 
 @media (max-width: 1024px) {
   .Days {
     display: flex;
-    flex-direction: column;
 
-    .poshelnahuy {
+    .filledDay {
       display: none;
     }
 
     .day {
-      width: 100%;
+      width: 30%;
       height: 40vh;
-      border-radius: 20px;
+
+      min-height: 200px;
 
       .dayNum {
         font-size: 2rem;
@@ -202,6 +222,24 @@
         font-size: Calc(1vw + 10px);
         line-height: 3vw;
       }
+
+      &:hover {
+        transform: none;
+      }
     }
   }
+}
+
+
+@media (max-width: 700px) {
+  .Days {
+    flex-direction: column;
+
+    .day {
+      width: 100%;
+      height: 40vh;
+      border-radius: 20px;
+    }
+  }
+
 }
