--- a/src/Components/footer.css
+++ b/src/Components/footer.css
@@ -1,26 +1,44 @@
 .Footer {
-    width: 100%;
-    height: 40px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    align-content: center;
-    color: #fff;
+  width: 100%;
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center;
+  color: #fff;
 }
-
+.Footer .footerRight {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  align-items: center;
+  height: 100%;
+  width: 50%;
+  text-align: start;
+}
 .Footer .footerLeft {
-    border: 0px;
+  height: 100%;
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  align-items: center;
+  justify-content: flex-end;
+  text-align: end;
+  border: 0px;
 }
-
+.Footer .footerLeft .marker {
+  padding: 0 16px 0 16px;
+  font-size: 32px;
+}
 .Footer .footerLeft a {
-    text-decoration: none;
+  text-decoration: none;
 }
-
 .Footer .footerLeft img {
-    display: block;
-    fill: #fff;
-    filter: invert(1);
+  display: block;
+  fill: #fff;
+  filter: invert(1);
 }
 
 /*# sourceMappingURL=footer.css.map */
