--- a/src/Components/footer.scss
+++ b/src/Components/footer.scss
@@ -12,10 +12,34 @@
   color: $text-color;
 
   .footerRight {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    align-items: center;
+
+    height: 100%;
+    width: 50%;
+    text-align: start;
 
   }
 
   .footerLeft {
+    height: 100%;
+    width: 50%;
+
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    align-items: center;
+    justify-content: flex-end;
+    text-align: end;
+
+    .marker {
+      padding: 0 16px 0 16px;
+      font-size: 32px;
+    }
+
+
     border: 0px;
 
     a {
