--- a/src/Components/header.css
+++ b/src/Components/header.css
@@ -1,34 +1,34 @@
 .Header {
-    display: flex;
-    align-items: center;
-    text-align: center;
-    justify-content: space-between;
-    height: 40px;
-    user-select: none;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: space-between;
+  height: 40px;
+  width: 100%;
+  user-select: none;
 }
 
 .Logo {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 28px;
-    display: flex;
-    align-items: center;
-    text-align: center;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 28px;
+  display: flex;
+  align-items: center;
+  text-align: center;
 }
 
 .Menu {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 16px;
-    display: flex;
-    align-items: center;
-    text-align: right;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 16px;
+  display: flex;
+  align-items: center;
+  text-align: right;
 }
-
 .Menu:nth-child(1) {
-    padding: 0 15px 0 15px;
+  padding: 0 15px 0 15px;
 }
 
 /*# sourceMappingURL=header.css.map */
