--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -1,3 +1,7 @@
-$base-color: #0E0E0E;
-$text-color: #fff;
-$day-background: #346784;
+$base-color: 14 14 14;
+$text-color: 255 255 255;
+$day-background: 52 103 132;
+$blue: 23 51 115;
+$lightblue: 30 136 229;
+$red: 249 63 50;
+$white: 248 249 250;
