--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
 body {
     margin: 0;
     height: 100%;
-    font-family: 'Roboto',
-    sans-serif;
+    font-family: "Roboto", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background: #0E0E0E;
+    background: #0e0e0e;
 }
 
 code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+/*# sourceMappingURL=index.css.map */
