--- a/src/Components/footer.css
+++ b/src/Components/footer.css
@@ -6,9 +6,9 @@
   justify-content: space-between;
   align-items: center;
   align-content: center;
-  color: #fff;
+  color: 255 255 255;
 }
-.Footer .footerRight {
+.Footer .Footer__Right {
   display: flex;
   flex-direction: row;
   align-content: center;
@@ -17,28 +17,34 @@
   width: 50%;
   text-align: start;
 }
-.Footer .footerLeft {
+.Footer .Footer__Left {
   height: 100%;
   width: 50%;
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: repeat(3, max-content);
+  grid-gap: 16px;
   align-content: center;
   align-items: center;
   justify-content: flex-end;
   text-align: end;
-  border: 0px;
+  border: 0;
 }
-.Footer .footerLeft .marker {
-  padding: 0 16px 0 16px;
+.Footer .Footer__Left .marker {
   font-size: 32px;
 }
-.Footer .footerLeft a {
+.Footer .Footer__Left .Footer__Left--github {
+  filter: invert(1);
+}
+.Footer .Footer__Left .Footer__Left--toggled {
+  transform: rotate(180deg);
+  filter: grayscale(1);
+}
+.Footer .Footer__Left a {
   text-decoration: none;
 }
-.Footer .footerLeft img {
+.Footer .Footer__Left img {
   display: block;
-  fill: #fff;
-  filter: invert(1);
+  fill: white;
 }
 
 /*# sourceMappingURL=footer.css.map */
