--- a/src/Components/header.css
+++ b/src/Components/header.css
@@ -10,12 +10,16 @@
 
 .Logo {
   font-style: normal;
-  font-weight: bold;
+  font-weight: 200;
   font-size: 24px;
   line-height: 28px;
   display: flex;
   align-items: center;
   text-align: center;
+}
+
+.Header__Logo--M {
+  font-weight: bold;
 }
 
 .Menu {
