--- a/src/Components/header.scss
+++ b/src/Components/header.scss
@@ -8,17 +8,22 @@
   width: 100%;
 
   user-select: none;
+
 }
 
 .Logo {
   font-style: normal;
-  font-weight: bold;
+  font-weight: 200;
   font-size: 24px;
   line-height: 28px;
 
   display: flex;
   align-items: center;
   text-align: center;
+}
+
+.Header__Logo--M {
+  font-weight: bold;
 }
 
 .Menu {
@@ -30,7 +35,6 @@
   display: flex;
   align-items: center;
   text-align: right;
-
 
   &:nth-child(1) {
     padding: 0 15px 0 15px;
