* Added support for days with several anime at once (sort by popularity); * Pictures now have larger resolution by default * Theme preference is saving now in localStorage * Some restructuring of codebase

--- a/src/Components/footer.css
+++ b/src/Components/footer.css
@@ -36,15 +36,16 @@
   filter: invert(1);
 }
 .Footer .Footer__Left .Footer__Left--toggled {
-  transform: rotate(180deg);
-  filter: grayscale(1);
+    transform: rotateY(180deg);
+    filter: grayscale(1);
 }
 .Footer .Footer__Left a {
   text-decoration: none;
 }
 .Footer .Footer__Left img {
-  display: block;
-  fill: white;
+    display: block;
+    fill: white;
+    transition: 0.3s linear;
 }
 
 /*# sourceMappingURL=footer.css.map */
