--- a/src/Components/Styling/footer.css
+++ b/src/Components/Styling/footer.css
@@ -1,12 +1,12 @@
 .Footer {
-  width: 100%;
-  height: 40px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  align-content: center;
-  color: 255 255 255;
+    width: 100%;
+    height: 40px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+    color: white;
 }
 .Footer .Footer__Right {
   display: flex;
