--- a/src/Components/Styling/footer.scss
+++ b/src/Components/Styling/footer.scss
@@ -1,4 +1,4 @@
-@import '../colors';
+@import '../../colors';
 
 .Footer {
   width: 100%;
@@ -9,7 +9,7 @@
   justify-content: space-between;
   align-items: center;
   align-content: center;
-  color: $text-color;
+  color: rgb($text-color);
 
   .Footer__Right {
     display: flex;
