--- a/src/Components/Styling/header.scss
+++ b/src/Components/Styling/header.scss
@@ -9,6 +9,17 @@
 
   user-select: none;
 
+  & a {
+    text-decoration: none;
+  }
+
+  & a:active, a:visited, a:link, a:hover {
+    color: inherit;
+  }
+
+  .Header--active {
+    font-weight: bold;
+  }
 }
 
 .Logo {
