--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@ body {
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: rgb($base-color);
+  //background: rgb($base-color);
 }
 
 code {
